compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__no_hint_for_non_method_call.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 2051
expression: "\npub record User {\n  User(id: Int, name: String)\n}\n\nfn login(user: User) {\n  user\n}\n\npub fn main(user: User) {\n  login(user.wibble)\n}\n"
---
----- SOURCE CODE

pub record User {
  User(id: Int, name: String)
}

fn login(user: User) {
  user
}

pub fn main(user: User) {
  login(user.wibble)
}


----- ERROR
error: Unknown record field
   ┌─ /src/one/two.rakun:11:13
   │
11 │   login(user.wibble)
   │             ^^^^^^^ This field does not exist

The value being accessed has this type:

    User

It has these accessible fields:

    .id
    .name
